fix broken layout

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -11,8 +11,8 @@
 
 #sidebar #avatar>a { border: none !important}
 
-#post-list .post-preview .post-content>p {
-    -webkit-line-clamp: 3;
+#post-list .card-text.content p {
+    -webkit-line-clamp: 4 !important;
 }
 
 .post-listitem {
@@ -22,8 +22,7 @@
     flex: 1;
 }
 .post-thumbnail {
-    margin-top: 1rem;
-    margin-right: 30px;
+    margin: 0 0 1rem 30px;
     width: 160px;
     height: 120px;
     border-radius: 10px;
